# CaliforniaPricing

./: .gitignore  Dataset_description.txt  payload.json  pyproject.toml  readme.md  requirements.txt
data/resultsdb/: model_results.csv
notebooks/: eda_analysis.py
src/: main.py  mlpipe.py  streamlit_app.py
tests/: test_main.py
